# pypi-package-example

./: .gitignore  CHANGELOG.md  LICENSE  README.md  master.yml  publish.yml  pyproject.toml  release-please-config.json  test.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
src/pypi_package_example/: __init__.py  main.py
src/pypi_package_example_qthedoc/: __init__.py  main.py
tests/: test_main.py
