[build-system]
requires = ["setuptools >= 61", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypi_package_example_qthedoc*"]

[project]
name = 'pypi-package-example-qthedoc'
dynamic = ["version"]
description = "Testing PyPI CI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
keywords = [
  "pypi", "ci"
]
classifiers =[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
test = [
  'pytest',
]

[project.urls]
Homepage = "https://github.com/qthedoc/pypi-package-example"
Repository = "https://github.com/qthedoc/pypi-package-example"
Issues = "https://github.com/qthedoc/pypi-package-example/issues"
"Say Thanks!" = "http://quinnmarsh.com"

