[build-system]
requires = ["setuptools >= 61", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypi_package_example_qthedoc*"]

[project]
name = 'pypi-package-example-qthedoc'
dynamic = ["version"]
description = "Testing PyPI CI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
keywords = [
  "pypi", "ci"
]
classifiers =[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
test = [
  'pytest',
]

[project.urls]
Homepage = "https://github.com/qthedoc/pypi-package-example"
Repository = "https://github.com/qthedoc/pypi-package-example"
Issues = "https://github.com/qthedoc/pypi-package-example/issues"
"Say Thanks!" = "http://quinnmarsh.com"

# ==================== bump-my-version config ====================
[tool.bumpversion]
current_version = "0.1.7"          # ← update this to your current version
commit = true
tag = true
tag_name = "v{new_version}"
message = "Release v{new_version}"

# Files to update version in
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/pypi_package_example/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# Optional: also update changelog (basic template)
[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## Unreleased"
replace = """## Unreleased

## {new_version} - {now:%Y-%m-%d}"""